--- a/index.html
+++ b/index.html
@@ -26,6 +26,36 @@
         </div>
     </nav>
     <main>
+        <section class="section1">
+            <div class="left">
+                <h1>2.0 Job Ready AI Powered Cohort: Complete Web Development + DSA + Gen-AI + Aptitude</h1>
+                <div class="tags">
+                    <h4>MERN Stack</h4>
+                    <h4>DSA With JS</h4>
+                    <h4>AI Powered</h4>
+                    <h4>Placement Focused</h4>
+                    <h4>Aptitude & Reasoning</h4>
+                </div>
+                <h3 class="price">Price <span class="crp">₹ 5999 </span><span class="ogp">₹ 11999</span> <span id="gst">(+ GST)</span></h3>
+                <h6 id="Scratch">Scratch Card in the End!</h6>
+                <div class="buttons">
+                    <button class="bt1">Buy Now</button>
+                    <button class="bt2">View Syllabus</button>
+                </div>
+                <h6>Enrollment is almost full <span>- Limited Seats Available</span></h6>
+            </div>
+            <div class="right">
+                <div>
+                    <img src="https://ik.imagekit.io/sheryians/cohort-3_ekZjBiRzc.jpeg" alt="">
+                </div>
+                <div>
+                    <h4>Language: <span>Hinglish</span></h4>
+                    <h4>Certificate: <span>YES</span></h4>
+                    <h4>Schedule: <span>Mon-Sat</span>(8:30)</h4>
+                    <h4>Total Content: <span>250+ Hours</span></h4>
+                </div>
+            </div>
+        </section>
     
     </main>
 </body>
