Section 1 Responsive tommorow

--- a/index.html
+++ b/index.html
@@ -45,14 +45,16 @@
                 <h6>Enrollment is almost full <span>- Limited Seats Available</span></h6>
             </div>
             <div class="right">
-                <div>
-                    <img src="https://ik.imagekit.io/sheryians/cohort-3_ekZjBiRzc.jpeg" alt="">
-                </div>
-                <div>
-                    <h4>Language: <span>Hinglish</span></h4>
-                    <h4>Certificate: <span>YES</span></h4>
-                    <h4>Schedule: <span>Mon-Sat</span>(8:30)</h4>
-                    <h4>Total Content: <span>250+ Hours</span></h4>
+                <div class="right-in">
+                    <div class="right-img">
+                    <img src="tn.jpeg" alt="">
+                    </div>
+                    <div class="Bottom">
+                    <h4>Language: <span class="gr">Hinglish</span></h4>
+                    <h4>Certificate: <span class="gr">YES</span></h4>
+                    <h4>Schedule: <span class="gr">Mon - Sat</span><span class="time">(8:30)</span></h4>
+                    <h4>Total Content: <span class="gr">250+ Hours</span></h4>
+                    </div>
                 </div>
             </div>
         </section>
